--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
-project(app1_grupo6)
+project(New_folder__9_ C)
 
-set(CMAKE_CXX_STANDARD 14)
-
-include_directories(.)
+set(CMAKE_C_STANDARD 99)
 
 add_executable(app1_grupo6
         archivo.c
@@ -12,7 +10,7 @@ add_executable(app1_grupo6
         libros.c
         libros.h
         main.c
-        main.exe
+
         README.md
         "Tarea 1.pdf"
         test.exe)
